# mojo-benchmarks

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _bench.py  bench_suite.codon  bench_suite.mojo  bench_suite.py  pyproject.toml
benches/crc16/: crc16.codon  crc16.mojo  crc16.py  crc16.rs
benches/matmul/: matmul.codon  matmul.mojo  matmul.py  matmul.rs
benches/quicksort/: quicksort.codon  quicksort.mojo  quicksort.py  quicksort.rs
benches/softmax/: softmax.codon  softmax.mojo  softmax.py  softmax.rs
results/: notebook.ipynb
