[tool.poetry]
name = "mojo"
version = "0.1.0"
description = ""
authors = ["red <red@kalab.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
orjson = "^3.10.4"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
